--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,7 @@ img {
     font-weight: 500;
     color: var(--text-black-600);
     margin: 0;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
 }
 
 .home-section .home-text .btn-1 {
